--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,6 @@
 		"noImplicitOverride": true,
 		"outDir": "./build",
 		"rootDir": ".",
-        "ignoreDeprecations": "6.0",
 		"baseUrl": "./src",
 		"paths": {
 		    "#server": ["./server.ts"],
@@ -23,7 +22,8 @@
             "#whatsapp/functions":["./whatsapp/functions/index.ts"],
 			"#whatsapp/client":["./whatsapp/client.ts"],
             "#env": ["./env.ts"],
-			"#lib": ["./lib/index.ts"],
+			"#functions": ["./functions/index.ts"],
+			"#database":["./database/index.ts"],
 			"#tools": ["./tools/index.ts"],
 			"#validation": ["./validation/index.ts"],
 			"#types/*": ["./@types/*"],
