--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "scripts": {
     "check": "tsc --noEmit && echo ✔ Ok",
     "build": "tsup",
-    "dev": "tsx --env-file .env ./src/server.ts",
-    "dev:dev": "tsx --env-file .env.dev ./src/server.ts",
-    "watch": "tsx --watch --env-file .env ./src/server.ts",
-    "watch:dev": "tsx --watch --env-file .env.dev ./src/server.ts",
+    "dev": "tsx --env-file .env ./src/index.ts",
+    "dev:dev": "tsx --env-file .env.dev ./src/index.ts",
+    "watch": "tsx --watch --env-file .env ./src/index.ts",
+    "watch:dev": "tsx --watch --env-file .env.dev ./src/index.ts",
     "start": "node --env-file .env .",
     "start:dev": "node --env-file .env.dev ."
   },
